0.2.4
Added: A blacklist for extra health and a blacklist for blights. Note that if a mob is blacklisted for extra health, it cannot become a blight.

0.2.3
Added: All players are now alerted when a blight is killed.
Added: Blights now drop heart canisters when killed (1-2 by default)
Changed: Blights while now reignite after a few seconds if their fire goes out.
Changed: Difficulty bar now displays both area and player difficulty (the lower quarter of the bar is player difficulty)
Fixed: A probable crash with the difficulty bar, if max difficulty is zero.
Fixed: Config option to render the difficulty bar being ignored.

0.2.2
Added: A difficulty bar. Displays for a short time occasionally. Feedback appreciated.
Fixed: Health modifiers being wrong when other modifiers are already applied.
Fixed: Heart rendering when player has regen.

0.2.1
Added: Heart Crystal Ore. Drops shards that can be used to craft heart containers...
Added: Group difficulty bonus. The area difficulty increases a bit more for each additional player in the area (configurable)
Added: Idle difficulty increase multiplier. By default, difficulty increase per second is slower when the player is not moving. Set it to a number greater than one is you want faster increase when idle.
Fixed: Player's health displaying incorrectly after traveling between dimensions.
Fixed: Hearts not shaking on low health.
Fixed: Mobs with low health getting a larger boost on "MULTI" health scaling modes.

0.2.0
WARNING: A new save system has been implemented! It should be much more reliable, but your current health and difficulty will reset to default values. Use the "/scalinghealth" command to correct that. Deleting your current main.cfg config file is not required, but recommended.
Added: A player-based difficulty system. Each player will track a difficulty level. Should be good for servers.