@@ -1,5 +1,7 @@
 0.2.4
 Added: A blacklist for extra health and a blacklist for blights. Note that if a mob is blacklisted for extra health, it cannot become a blight.
+Added: Config to specify extra heart colors.
+Added: Death message when blights are killed by something other than a player.
 
 0.2.3
 Added: All players are now alerted when a blight is killed.
